fixed preview content blurring out

--- a/frontend/internhunt/src/pages/posts.css
+++ b/frontend/internhunt/src/pages/posts.css
@@ -39,11 +39,6 @@
   text-decoration: none;
 }
 
-/* .posts-page .postpreview p {
-  -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
-  mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
-} */
-
 .posts-page .voting-interface button {
   display: block;
   background-color: white;
